<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <TextView
        android:id="@+id/fragment_statistiques_statistique_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="?attr/secondaryColor"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/h1_textsize"
        android:text="@string/gadget_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragment_gadget_chronometer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:tag="chronometerBtn"
            android:background="@drawable/sh_gradient_background"
            android:layout_margin="20dp"
            android:padding="30dp">

            <ImageView
                android:id="@+id/fragment_tools_chrono_logo"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:contentDescription="@string/desc_logo_chrono"
                android:src="@drawable/ic_timer_white_24dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/chronometre"
                android:textSize="@dimen/h3_textsize"
                android:textColor="?attr/textColor"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_gadget_timer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:tag="timerBtn"
            android:background="@drawable/sh_gradient_background"
            android:layout_margin="20dp"
            android:padding="30dp">
            <ImageView
                android:id="@+id/fragment_tools_timer_logo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_logo_timer"
                android:src="@drawable/ic_play_arrow_white_24dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/timer"
                android:textSize="@dimen/h3_textsize"
                android:textColor="?attr/textColor"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_gadget_converter"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:tag="converterBtn"
            android:background="@drawable/sh_gradient_background"
            android:layout_margin="20dp"
            android:padding="30dp">
            <ImageView
                android:id="@+id/fragment_tools_converter_logo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/desc_logo_converter"
                android:src="@drawable/ic_sync_alt_white_24dp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/converter"
                android:textSize="@dimen/h3_textsize"
                android:textColor="?attr/textColor"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>