<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="10dp"
    android:layout_margin="20dp"
    android:background="@drawable/sh_gradient_background"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/rv_race_item_competition_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint_city"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textSize="@dimen/rv_race_item_textsize"
            android:textColor="?attr/textColor"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/rv_race_item_date"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/hint_date"
            android:fontFamily="sans-serif-light"
            android:textColor="?attr/textColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/rv_race_item_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/hint_time"
            android:textSize="@dimen/h2_textsize"
            android:gravity="center"
            android:layout_gravity="top"
            android:textColor="?attr/secondaryColor"
            tools:ignore="Suspicious0dp" />

        <TextView
            android:id="@+id/rv_race_item_diff"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="?attr/textColor"
            android:text="@string/hint_diff"
            android:fontFamily="sans-serif-light"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>