<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sh_popup_menu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informations"
        android:fontFamily="sans-serif-light"
        android:textColor="?attr/secondaryColor"
        android:textAlignment="center"
        android:textSize="@dimen/h2_textsize"
        android:padding="20dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:id="@+id/fragment_competition_add_race_popup_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/add_new_element"
            android:textSize="@dimen/h3_textsize"
            android:textColor="?attr/textColor"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/fragment_competition_add_race_popup_swim_description"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text=""
            android:textSize="@dimen/h4_textsize"
            android:textColor="?attr/textColor"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/h4_input_text"
                    android:text="@string/date"
                    android:textColor="?attr/textColor"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="@dimen/h4_textsize" />

                <EditText
                    android:id="@+id/race_popup_edit_text_date"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/h4_input_text"
                    android:gravity="center"
                    android:hint="@string/hint_date"
                    android:inputType="date"
                    android:digits="0123456789"
                    android:maxLength="10"
                    android:textSize="@dimen/h4_textsize"
                    android:textColorHint="?attr/hintColor"
                    android:background="?attr/transparent"
                    android:textColor="?attr/textColor"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/h4_input_text"
                    android:text="@string/city"
                    android:textAlignment="center"
                    android:textColor="?attr/textColor"
                    android:gravity="center"
                    android:textSize="@dimen/custom_popup_textsize" />
                <EditText
                    android:id="@+id/race_popup_edit_text_city"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/h4_input_text"
                    android:gravity="center"
                    android:hint="@string/hint_city"
                    android:inputType="textCapCharacters"
                    android:textSize="@dimen/custom_popup_textsize"
                    android:textColorHint="?attr/hintColor"
                    android:background="?attr/transparent"
                    android:textColor="?attr/textColor"
                    android:autofillHints="" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h4_input_text"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/temps"
                android:textColor="?attr/textColor"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="@dimen/custom_popup_textsize" />

            <EditText
                android:id="@+id/race_popup_edit_text_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_time"
                android:digits="0123456789"
                android:inputType="time"
                android:maxLength="8"
                android:textSize="@dimen/custom_popup_textsize"
                android:textAlignment="center"
                android:textColorHint="?attr/hintColor"
                android:background="?attr/transparent"
                android:textColor="?attr/textColor"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/h3_input_text"
                    android:text="@string/level"
                    android:textAlignment="center"
                    android:textColor="?attr/textColor"
                    android:gravity="center"
                    android:textSize="@dimen/custom_popup_textsize" />

                <Spinner
                    android:id="@+id/race_popup_spinner_level"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/h3_input_text"
                    android:backgroundTint="?attr/textColor"
                    tools:targetApi="lollipop" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/h3_input_text"
                    android:text="@string/country"
                    android:textAlignment="center"
                    android:textColor="?attr/textColor"
                    android:gravity="center"
                    android:textSize="@dimen/custom_popup_textsize" />

                <EditText
                    android:id="@+id/race_popup_edit_text_country"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/h3_input_text"
                    android:gravity="center"
                    android:text=""
                    android:textColorHint="?attr/hintColor"
                    android:inputType="textCapCharacters"
                    android:textAlignment="center"
                    android:textSize="@dimen/custom_popup_textsize"
                    android:hint="@string/hint_country"
                    android:background="?attr/transparent"
                    android:textColor="?attr/textColor"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/h4_input_text"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/fragment_competition_add_race_popup_denied"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/denied"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/custom_popup_textsize"
                android:textColor="?attr/redLightColor"
                android:background="?attr/transparent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/fragment_competition_add_race_popup_confirmed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirmed"
                android:fontFamily="sans-serif-light"
                android:textSize="@dimen/custom_popup_textsize"
                android:textColor="?attr/blueLightColor"
                android:background="?attr/transparent"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>