<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sh_popup_menu">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/insert_times"
        android:textSize="@dimen/h1_textsize"
        android:textColor="?attr/secondaryColor"
        android:gravity="center"
        android:fontFamily="sans-serif-light" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_times"
            android:textSize="@dimen/h3_textsize"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:layout_marginVertical="10dp"
            android:textColor="?attr/textColor" />
        <TextView
            android:id="@+id/popup_update_training_times_title_serie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="sans-serif-light"
            android:textSize="@dimen/h3_textsize"
            android:gravity="center"
            android:textColor="?attr/textColor" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popup_update_training_times_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/popup_update_training_denied"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/transparent"
            android:textColor="?attr/redDeepColor"
            android:text="@string/denied"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="@dimen/h4_textsize" />

        <Button
            android:id="@+id/popup_update_training_confirmed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/transparent"
            android:textColor="?attr/blueLightColor"
            android:text="@string/confirmed"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="@dimen/h4_textsize" />
    </LinearLayout>

</LinearLayout>